# Storage1FastAPI

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: .env-template  main.py
app/alembic/: env.py
app/alembic/versions/: 2025_02_24_1257-efc80c79903a_create_orders_products_orderitems_tables.py  2025_02_25_2351-c652f8a52bd4_create_all_tables.py
app/api/: __init__.py
app/api/dependencies/: product.py
app/api/views/: order.py  product.py
app/core/: __init__.py  config.py  db_helper.py  exceptions.py  schemas.py  uow.py
app/core/models/: __init__.py  base.py  order.py  order_item.py  product.py
app/core/models/mixins/: __init__.py
app/core/repositories/: __init__.py  base.py  order.py  product.py
app/core/schemas/: order.py  product.py
app/core/services/: __init__.py  order.py  product.py
